# Jarlang

./: .gitignore  Cargo.toml  README.md
src/: command.rs  main.rs  repl.rs  runtime.rs
src/frontend/: ast.rs  lexer.rs  parser.rs
src/runtime/: environment.rs  helpers.rs  interpreter.rs  values.rs
src/runtime/evaluation/: expressions.rs  statements.rs
