[package]
name = "jarlang"
description = "Run your Jarlang (.jrl) files using the Jarlang interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
